# kndbot

./: .env.dev  README.md  __version__  bot.py  pyproject.toml  requirements.txt
basic_plugins/: about.py  group_welcome_msg.py  nickname.py  scripts.py
basic_plugins/admin_bot_manage/: __init__.py  _data_source.py  admin_config.py  custom_welcome_message.py  rule.py  switch_rule.py  timing_task.py  update_group_member_info.py
basic_plugins/admin_help/: __init__.py  data_source.py
basic_plugins/ban/: __init__.py  data_source.py
basic_plugins/broadcast/: __init__.py
basic_plugins/check_level/: __init__.py
basic_plugins/dialogue/: __init__.py
basic_plugins/dupli_clean/: __init__.py
basic_plugins/group_handle/: __init__.py  rule.py
basic_plugins/help/: __init__.py  data_source.py
basic_plugins/hooks/: __init__.py  _utils.py  auth_hook.py  ban_hook.py  fk_hook.py  task_hook.py  withdraw_message_hook.py
configs/: config.py  path_config.py
docs/: README.md  about.md
manager/: __init__.py  configs_manager.py  data_class.py  group_manager.py  mute_manager.py  none_plugin_count_manager.py  plugins2cd_manager.py  plugins2count_manager.py  plugins2settings_manager.py  plugins_manager.py  requests_manager.py  resources_manager.py  super_manager.py
models/: bag_user.py  ban_info.py  friend_user.py  goods_info.py  group_info.py  group_member_info.py  level_user.py  sign_group_user.py  user_shop_gold_log.py
plugins/: about.py
services/: db_context.py  log.py
utils/: browser.py  data_utils.py  http_utils.py  limit_utils.py  message_builder.py  utils.py
(+287 files in other folders)
